--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,8 @@
     }
    ],
    "source": [
-    "\"art vandelay\".upper # 'Art Vandelay'"
+    "\"art vandelay\".upper()\n",
+    "# 'Art Vandelay'"
    ]
   },
   {
