--- a/index.ipynb
+++ b/index.ipynb
@@ -187,23 +187,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.upper>"
+       "'Art vandelay'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art vandelay\".upper()\n",
-    "# 'Art Vandelay'"
+    "\"art vandelay\".capitalize() # 'Art Vandelay'"
    ]
   },
   {
