--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -276,17 +276,17 @@
     {
      "data": {
       "text/plain": [
-       "'www.vandelay.com'"
+       "'vandelay.com'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "\"www.\"+(\"vandelay.com\") "
+    "www."
    ]
   },
   {
